# serializer version: 1
# name: test_all_entities[indoor][select.airgradient_co2_automatic_baseline_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1',
        '7',
        '8',
        '30',
        '90',
        '180',
        '0',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_co2_automatic_baseline_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CO2 automatic baseline duration',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CO2 automatic baseline duration',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'co2_automatic_baseline_calibration',
    'unique_id': '84fce612f5b8-co2_automatic_baseline_calibration',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][select.airgradient_co2_automatic_baseline_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient CO2 automatic baseline duration',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1',
        '7',
        '8',
        '30',
        '90',
        '180',
        '0',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_co2_automatic_baseline_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_all_entities[indoor][select.airgradient_configuration_source-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cloud',
        'local',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_configuration_source',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Configuration source',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Configuration source',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'configuration_control',
    'unique_id': '84fce612f5b8-configuration_control',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][select.airgradient_configuration_source-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Configuration source',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cloud',
        'local',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_configuration_source',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'local',
  })
# ---
# name: test_all_entities[indoor][select.airgradient_display_pm_standard-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ugm3',
        'us_aqi',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_display_pm_standard',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Display PM standard',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display PM standard',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_pm_standard',
    'unique_id': '84fce612f5b8-display_pm_standard',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][select.airgradient_display_pm_standard-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Display PM standard',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ugm3',
        'us_aqi',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_display_pm_standard',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ugm3',
  })
# ---
# name: test_all_entities[indoor][select.airgradient_display_temperature_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'c',
        'f',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_display_temperature_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Display temperature unit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display temperature unit',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_temperature_unit',
    'unique_id': '84fce612f5b8-display_temperature_unit',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][select.airgradient_display_temperature_unit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Display temperature unit',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'c',
        'f',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_display_temperature_unit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'c',
  })
# ---
# name: test_all_entities[indoor][select.airgradient_led_bar_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'co2',
        'pm',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_led_bar_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'LED bar mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'LED bar mode',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'led_bar_mode',
    'unique_id': '84fce612f5b8-led_bar_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][select.airgradient_led_bar_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient LED bar mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'co2',
        'pm',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_led_bar_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'co2',
  })
# ---
# name: test_all_entities[indoor][select.airgradient_nox_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_nox_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'NOx index learning offset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'NOx index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nox_index_learning_time_offset',
    'unique_id': '84fce612f5b8-nox_index_learning_time_offset',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][select.airgradient_nox_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient NOx index learning offset',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_nox_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_all_entities[indoor][select.airgradient_voc_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_voc_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'VOC index learning offset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VOC index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'voc_index_learning_time_offset',
    'unique_id': '84fce612f5b8-voc_index_learning_time_offset',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][select.airgradient_voc_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient VOC index learning offset',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_voc_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_all_entities[outdoor][select.airgradient_co2_automatic_baseline_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1',
        '7',
        '8',
        '30',
        '90',
        '180',
        '0',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_co2_automatic_baseline_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CO2 automatic baseline duration',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CO2 automatic baseline duration',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'co2_automatic_baseline_calibration',
    'unique_id': '84fce612f5b8-co2_automatic_baseline_calibration',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[outdoor][select.airgradient_co2_automatic_baseline_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient CO2 automatic baseline duration',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1',
        '7',
        '8',
        '30',
        '90',
        '180',
        '0',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_co2_automatic_baseline_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_all_entities[outdoor][select.airgradient_configuration_source-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cloud',
        'local',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_configuration_source',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Configuration source',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Configuration source',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'configuration_control',
    'unique_id': '84fce612f5b8-configuration_control',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[outdoor][select.airgradient_configuration_source-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Configuration source',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cloud',
        'local',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_configuration_source',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'local',
  })
# ---
# name: test_all_entities[outdoor][select.airgradient_nox_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_nox_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'NOx index learning offset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'NOx index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nox_index_learning_time_offset',
    'unique_id': '84fce612f5b8-nox_index_learning_time_offset',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[outdoor][select.airgradient_nox_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient NOx index learning offset',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_nox_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_all_entities[outdoor][select.airgradient_voc_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_voc_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'VOC index learning offset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VOC index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'voc_index_learning_time_offset',
    'unique_id': '84fce612f5b8-voc_index_learning_time_offset',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[outdoor][select.airgradient_voc_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient VOC index learning offset',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_voc_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_v1_entities[select.airgradient_back_led_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'dim',
        'mid',
        'bright',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_back_led_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Back LED brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Back LED brightness',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'back_led_brightness',
    'unique_id': '84fce612f5b8-back_led_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_back_led_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Back LED brightness',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'dim',
        'mid',
        'bright',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_back_led_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'mid',
  })
# ---
# name: test_v1_entities[select.airgradient_co2_automatic_baseline_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1',
        '7',
        '8',
        '30',
        '90',
        '180',
        '0',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_co2_automatic_baseline_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CO2 automatic baseline duration',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CO2 automatic baseline duration',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'co2_automatic_baseline_calibration',
    'unique_id': '84fce612f5b8-co2_automatic_baseline_calibration',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_co2_automatic_baseline_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient CO2 automatic baseline duration',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1',
        '7',
        '8',
        '30',
        '90',
        '180',
        '0',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_co2_automatic_baseline_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7',
  })
# ---
# name: test_v1_entities[select.airgradient_configuration_source-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cloud',
        'local',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_configuration_source',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Configuration source',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Configuration source',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'configuration_control',
    'unique_id': '84fce612f5b8-configuration_control',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_configuration_source-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Configuration source',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cloud',
        'local',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_configuration_source',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'local',
  })
# ---
# name: test_v1_entities[select.airgradient_display_pm_standard-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ugm3',
        'us_aqi',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_display_pm_standard',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Display PM standard',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display PM standard',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_pm_standard',
    'unique_id': '84fce612f5b8-display_pm_standard',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_display_pm_standard-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Display PM standard',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ugm3',
        'us_aqi',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_display_pm_standard',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ugm3',
  })
# ---
# name: test_v1_entities[select.airgradient_display_temperature_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'c',
        'f',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_display_temperature_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Display temperature unit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display temperature unit',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_temperature_unit',
    'unique_id': '84fce612f5b8-display_temperature_unit',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_display_temperature_unit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Display temperature unit',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'c',
        'f',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_display_temperature_unit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'c',
  })
# ---
# name: test_v1_entities[select.airgradient_front_led_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'dim',
        'mid',
        'bright',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_front_led_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Front LED brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Front LED brightness',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'front_led_brightness',
    'unique_id': '84fce612f5b8-front_led_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_front_led_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Front LED brightness',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'dim',
        'mid',
        'bright',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_front_led_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'dim',
  })
# ---
# name: test_v1_entities[select.airgradient_gps_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'tracking',
        'always',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_gps_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'GPS mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'GPS mode',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'gps_mode',
    'unique_id': '84fce612f5b8-gps_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_gps_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient GPS mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'tracking',
        'always',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_gps_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'tracking',
  })
# ---
# name: test_v1_entities[select.airgradient_nox_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_nox_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'NOx index learning offset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'NOx index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nox_index_learning_time_offset',
    'unique_id': '84fce612f5b8-nox_index_learning_time_offset',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_nox_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient NOx index learning offset',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_nox_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_v1_entities[select.airgradient_touch_led_intensity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'dim',
        'bright',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_touch_led_intensity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Touch LED intensity',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Touch LED intensity',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'touch_led_intensity',
    'unique_id': '84fce612f5b8-touch_led_intensity',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_touch_led_intensity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient Touch LED intensity',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'dim',
        'bright',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_touch_led_intensity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'bright',
  })
# ---
# name: test_v1_entities[select.airgradient_voc_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.airgradient_voc_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'VOC index learning offset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VOC index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'voc_index_learning_time_offset',
    'unique_id': '84fce612f5b8-voc_index_learning_time_offset',
    'unit_of_measurement': None,
  })
# ---
# name: test_v1_entities[select.airgradient_voc_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airgradient VOC index learning offset',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '12',
        '60',
        '120',
        '360',
        '720',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.airgradient_voc_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
